# census-llm-agent

./: .gitignore  Dockerfile  MIGRATION.md  PACKAGES.md  QUICKSTART.md  README.md  RUN_TESTS.md  STRUCTURE.md  UNICODE_FIX.md  docker-compose.yml  install_gui.bat  install_gui.ps1  intent.py  main.py  mvp.py  orleans_parish_median_income.csv  pyproject.toml  requirements.txt  resolver.py  run_gui.bat  run_gui.ps1  run_shiny.ps1  run_shiny.py  run_tests.bat  setup_uv.bat  setup_uv.ps1  test_geography_fix.py  test_income_variables.py  test_langchain_integration.py  test_multiagent.py  test_query.py  test_rag_with_docs.py  test_variable_match.py
chroma_db/: chroma.sqlite3
docs/: BUGFIX_PERCENTAGE_SCALING.md  LANGCHAIN_FEATURES.md  LANGCHAIN_IMPLEMENTATION_SUMMARY.md  LANGCHAIN_QUICKSTART.md  MULTIAGENT_SUMMARY.md  RAG_DOCUMENTATION_ENHANCEMENT.md  RAG_ENHANCEMENT_SUMMARY.md  README.md  USAGE_GUIDE.md  VARIABLE_ASSISTANT_LANGCHAIN.md  VERIFICATION_GUIDE.md
docs/notes/: BEFORE_AFTER.md  PACKAGES.md  REORGANIZATION_SUMMARY.md  RUN_TESTS.md  STRUCTURE.md
gui/: README.md  app.py  shiny_app.py
scripts/: build_doc_index.py  check_ollama.py  check_variable.py  debug_intent.py  fetch_orleans_income.py  show_structure.py  side_by_side_verification.py  verify_caddo_poverty.py  verify_raw_data.py
scripts/windows/: install_gui.bat  install_gui.ps1  run.bat  run_gui.bat  run_gui.ps1  run_shiny.ps1  run_tests.bat  setup_uv.bat  setup_uv.ps1
src/: acs_tools.py  geography.py  mvp_multiagent.py
src/agents/: __init__.py  base_agent.py  config.py  geography_agent.py  orchestrator_agent.py  query_planner_agent.py  variable_agent.py
src/docs/: __init__.py  retriever.py
src/langchain_features/: census_agent.py  census_rag.py  conversation_memory.py  query_engine.py
src/single_agent/: intent.py  mvp.py  resolver.py
tests/: conftest.py  test_basic.py  test_caddo_fix.py  test_comprehensive.py  test_geography.py  test_intent.py  test_multiagent.py  test_pipeline.py  test_resolver.py
tests/manual/: test_gui_imports.py  test_ollama.py
